# Baiterek

./: .env.example  .gitignore  FINAL_QA_REPORT.md  PROJECT_PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-production.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/api/: index.py
backend/app/: __init__.py  data.py  engine.py  main.py  models.py  schemas.py
backend/tests/: test_core.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT_STATUS.md  PITCH_DECK_OUTLINE.md  PRODUCTION_DEPLOYMENT.md  SUBMISSION_CHECKLIST.md
frontend/: Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx
frontend/app/[[...slug]]/: page.tsx
frontend/lib/: demo-data.json  demo-fallback.ts
scripts/: verify-production.ps1
supabase/: README.md
