[project]
name = "baiterek-flowos-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1", "pydantic>=2.11,<3", "pydantic-settings>=2.10,<3", "SQLAlchemy>=2,<3", "alembic>=1.16,<2", "psycopg[binary]>=3.2,<4", "python-multipart>=0.0.20,<1"]

[project.optional-dependencies]
test = ["pytest>=8,<10", "httpx>=0.28,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

